--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -39,6 +39,11 @@ main {
     justify-content: center;
     align-items: center;
 }
+header {
+    width: 100%;
+    height: 100px;
+    padding: 30px;
+}
 
 footer {
     width: 100%;
